--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="exo_black_opacity_60">#98000000</color>
+    <color name="placeholder_color">#B9BDC0</color>
+    <color name="color_blue_500">#3F51B5</color>
 </resources>
