--- a/app/src/main/res/layout/dialog_no_internet.xml
+++ b/app/src/main/res/layout/dialog_no_internet.xml
@@ -15,7 +15,7 @@
             android:id="@+id/tv_dialog_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/color_blue_500"
+            android:background="@color/blue_500"
             android:gravity="center"
             android:padding="@dimen/_8sdp"
             android:text="No Internet"
@@ -32,7 +32,7 @@
             android:layout_width="@dimen/_75sdp"
             android:layout_height="@dimen/_75sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            android:src="@drawable/ic_error"
+            android:src="@drawable/ic_no_wifi"
             app:layout_constraintBottom_toTopOf="@+id/tv_dialog_body"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
