--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
 
     <color name="exo_black_opacity_60">#98000000</color>
     <color name="placeholder_color">#B9BDC0</color>
-    <color name="color_blue_500">#3F51B5</color>
+    <color name="blue_500">#3F51B5</color>
+    <color name="text_color">@color/black</color>
 </resources>
