--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,14 +42,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_logo_text">
-    </androidx.core.widget.NestedScrollView>
-    -->
+    <ImageView
+        android:id="@+id/iv_searchIcon"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
+        android:src="@drawable/ic_search"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_logo_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/_8sdp"
+
+        app:layout_constraintTop_toTopOf="@+id/tv_logo_text" />
+        -->
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/sv_home_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/_8sdp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_logo_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_logo_text"
+        app:queryHint="Search video" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_view_container"
@@ -58,15 +70,16 @@
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_logo_text">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <include layout="@layout/placeholder_for_animation"/>
-        <include layout="@layout/placeholder_for_animation"/>
-        </LinearLayout>
+            <include layout="@layout/placeholder_for_animation" />
 
+            <include layout="@layout/placeholder_for_animation" />
+        </LinearLayout>
 
 
     </com.facebook.shimmer.ShimmerFrameLayout>
@@ -75,7 +88,6 @@
         android:id="@+id/rv_home_videos"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_logo_text" />
@@ -90,5 +102,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_logo_text" />
         -->
+
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_logo_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
