--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -34,6 +34,7 @@
                 android:textSize="@dimen/_13sdp"
                 android:textStyle="bold"
                 android:maxLines="2"
+                android:padding="@dimen/_4sdp"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Hello world" />
 
@@ -59,10 +60,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_player_video_description" />
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.core.widget.NestedScrollView>
 
     <ProgressBar
