--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -25,6 +25,7 @@
         android:textSize="16sp"
         android:textColor="@color/text_color"
         android:maxLines="2"
+        android:layout_marginStart="@dimen/_8sdp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/searchImageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:text="Description"
         android:textSize="14sp"
+        android:layout_marginStart="@dimen/_8sdp"
         android:textColor="#808080"
         app:layout_constraintStart_toEndOf="@id/searchImageView"
         app:layout_constraintEnd_toEndOf="parent"
