--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.playerActivity.PlayerActivity">
 
+
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/youtube_player_view"
         android:layout_width="match_parent"
@@ -14,9 +15,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nsv_player_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/nsv_player_scroll_view"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/youtube_player_view">
 
@@ -28,15 +29,24 @@
                 android:id="@+id/tv_player_video_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_11sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:textSize="@dimen/_13sdp"
-                android:textStyle="bold"
                 android:maxLines="2"
                 android:padding="@dimen/_4sdp"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/_16sdp"
+                android:textStyle="bold"
                 app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="10dp"
                 tools:text="Hello world" />
+
+            <TextView
+                android:id="@+id/tv_player_video_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Hello world"
+                android:layout_marginStart="@dimen/_8sdp"
+                app:layout_constraintStart_toStartOf="@+id/tv_player_video_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_player_video_title" />
 
             <TextView
                 android:id="@+id/tv_player_video_description"
@@ -47,19 +57,146 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/tv_player_video_title"
                 app:layout_constraintStart_toStartOf="@+id/tv_player_video_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_player_video_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_player_video_view"
                 tools:text="Hello world" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_react"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginEnd="@dimen/_8sdp"
+                app:cardBackgroundColor="#DFDFDF"
+                app:cardCornerRadius="@dimen/_10sdp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_player_video_description">
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cl_react"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/iv_player_like"
+                        android:layout_width="@dimen/_24sdp"
+                        android:layout_height="@dimen/_24sdp"
+                        android:layout_marginStart="@dimen/_24sdp"
+                        android:src="@drawable/ic_like"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_player_like"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_4sdp"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/_12sdp"
+                        app:layout_constraintEnd_toEndOf="@+id/iv_player_like"
+                        app:layout_constraintStart_toStartOf="@+id/iv_player_like"
+                        app:layout_constraintTop_toBottomOf="@+id/iv_player_like"
+                        tools:text="12k" />
+
+                    <ImageView
+                        android:id="@+id/iv_player_share"
+                        android:layout_width="@dimen/_24sdp"
+                        android:layout_height="@dimen/_24sdp"
+                        android:layout_marginEnd="@dimen/_24sdp"
+                        android:src="@drawable/ic_share"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_player_share"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Share"
+                        android:layout_marginTop="@dimen/_4sdp"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/_12sdp"
+                        app:layout_constraintEnd_toEndOf="@+id/iv_player_share"
+                        app:layout_constraintStart_toStartOf="@+id/iv_player_share"
+                        app:layout_constraintTop_toBottomOf="@+id/iv_player_share" />
+
+                    <ImageView
+                        android:id="@+id/iv_player_comment"
+                        android:layout_width="@dimen/_24sdp"
+                        android:layout_height="@dimen/_24sdp"
+                        android:src="@drawable/ic_comment"
+                        app:layout_constraintEnd_toStartOf="@+id/iv_player_share"
+                        app:layout_constraintStart_toEndOf="@+id/iv_player_like"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_player_comment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/_12sdp"
+                        android:layout_marginTop="@dimen/_4sdp"
+                        app:layout_constraintEnd_toEndOf="@+id/iv_player_comment"
+                        app:layout_constraintStart_toStartOf="@+id/iv_player_comment"
+                        app:layout_constraintTop_toBottomOf="@+id/iv_player_comment"
+                        tools:text="5k" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_player_channel_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_8sdp"
+                app:layout_constraintTop_toBottomOf="@+id/cv_react">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView4"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_50sdp"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    app:cardCornerRadius="100dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/iv_player_channel_avatar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@mipmap/ic_launcher_round" />
+
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/tv_player_channel_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/_13sdp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/cardView4"
+                    app:layout_constraintTop_toTopOf="@+id/cardView4"
+                    tools:text="Hello world" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_related_video"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginStart="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginEnd="@dimen/_8sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_player_video_description" />
+                app:layout_constraintTop_toBottomOf="@+id/cl_player_channel_details" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
