--- a/app/src/main/res/layout/item_playlist_video.xml
+++ b/app/src/main/res/layout/item_playlist_video.xml
@@ -6,48 +6,46 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView3"
+        android:id="@+id/cardView6"
         android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_80sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        app:cardCornerRadius="8dp"
+        android:layout_height="@dimen/_70sdp"
+        android:layout_marginBottom="@dimen/_8sdp"
+        app:cardCornerRadius="@dimen/_8sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/iv_channel_video_thumbnail"
+            android:id="@+id/iv_playList_item_thumbnail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image_placeholder" />
+            android:scaleType="center"
+            tools:src="@drawable/image_placeholder" />
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/tv_channel_video_title"
+        android:id="@+id/tv_playlist_item_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginStart="12dp"
         android:layout_marginEnd="@dimen/_8sdp"
         android:maxLines="2"
         android:textColor="@color/text_color"
         android:textSize="@dimen/_13sdp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cardView3"
-        app:layout_constraintTop_toTopOf="@+id/cardView3"
-        tools:text="Hello world\nHello world" />
-
-    <TextView
-        android:id="@+id/tv_channel_video_publish_date"
-        android:layout_width="0sp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_8sdp"
-        android:textColor="@color/text_color"
-        android:textSize="@dimen/_12sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_channel_video_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_channel_video_title"
+        app:layout_constraintStart_toEndOf="@+id/cardView6"
+        app:layout_constraintTop_toTopOf="@+id/cardView6"
+        app:layout_goneMarginStart="@dimen/_8sdp"
         tools:text="Hello world" />
 
+    <TextView
+        android:id="@+id/tv_playlist_item_channel_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:textSize="@dimen/_13sdp"
+        app:layout_constraintStart_toEndOf="@+id/cardView6"
+        app:layout_constraintTop_toBottomOf="@+id/tv_playlist_item_title"
+        tools:text="Hello world" />
 </androidx.constraintlayout.widget.ConstraintLayout>
