--- a/app/src/main/res/layout/placeholder_for_animation.xml
+++ b/app/src/main/res/layout/placeholder_for_animation.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_playlist_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_200sdp"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:src="@drawable/image_placeholder"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -63,6 +63,5 @@
         app:layout_constraintStart_toStartOf="@+id/tv_playlist_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_playlist_title"
         tools:text="hello world" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
