--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -6,13 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.playerActivity.PlayerActivity">
 
-
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/youtube_player_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_count_down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/_16sdp"
+        android:layout_marginBottom="@dimen/_32sdp"
+        android:alpha="0.7"
+        android:visibility="gone"
+        android:background="@color/white"
+        android:padding="@dimen/_8sdp"
+        android:textColor="@color/text_color"
+        android:textSize="@dimen/_13sdp"
+        app:layout_constraintBottom_toBottomOf="@+id/youtube_player_view"
+        app:layout_constraintEnd_toEndOf="@+id/youtube_player_view"
+        tools:text="Hello World" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nsv_player_scroll_view"
@@ -43,20 +58,20 @@
                 android:id="@+id/tv_player_video_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Hello world"
                 android:layout_marginStart="@dimen/_8sdp"
                 app:layout_constraintStart_toStartOf="@+id/tv_player_video_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_player_video_title" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_player_video_title"
+                tools:text="Hello world" />
 
             <TextView
                 android:id="@+id/tv_player_video_description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginEnd="@dimen/_8sdp"
                 android:textSize="@dimen/_11sdp"
                 android:visibility="gone"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
                 app:layout_constraintEnd_toEndOf="@+id/tv_player_video_title"
                 app:layout_constraintStart_toStartOf="@+id/tv_player_video_title"
                 app:layout_constraintTop_toBottomOf="@+id/tv_player_video_view"
@@ -116,8 +131,8 @@
                         android:id="@+id/tv_player_share"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Share"
                         android:layout_marginTop="@dimen/_4sdp"
+                        android:text="Share"
                         android:textColor="@color/text_color"
                         android:textSize="@dimen/_12sdp"
                         app:layout_constraintEnd_toEndOf="@+id/iv_player_share"
@@ -137,9 +152,9 @@
                         android:id="@+id/tv_player_comment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_4sdp"
                         android:textColor="@color/text_color"
                         android:textSize="@dimen/_12sdp"
-                        android:layout_marginTop="@dimen/_4sdp"
                         app:layout_constraintEnd_toEndOf="@+id/iv_player_comment"
                         app:layout_constraintStart_toStartOf="@+id/iv_player_comment"
                         app:layout_constraintTop_toBottomOf="@+id/iv_player_comment"
