--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -18,7 +18,7 @@
             android:id="@+id/iv_comment_channel_avatar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="center"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher_round" />
     </androidx.cardview.widget.CardView>
 
